Cinématiques et mouvement
- Ajout de l'icône du joueur et implémentation des mouvements à droite et à gauche dans le cadre
- Modification du fichier des cinématiques pour inclure les variables
- Programmation du texte des premières cinématiques (intro, échec, premier niveau, deuxième niveau)
- Intégratioon du système de machine à écrire pour l'affichage du texte

Co-authored-by: jcolange <jade.colanges@live.fr>
Co-committed-by: jcolange <jade.colanges@live.fr>

--- a/page/main-menu.css
+++ b/page/main-menu.css
@@ -37,7 +37,7 @@
 }
 
 /* Icône paramètres en bas à droite */
-.settings-icon {
+.pause-btn {
   grid-column: 3; /* colonne centrale */
   grid-row: 1; /* ligne du bas */
   display: flex;
@@ -46,6 +46,6 @@
   padding: 20px;
 }
 
-.settings-icon:hover {
+.pause-btn:hover {
   cursor: pointer;
 }
