--- a/page/game.css
+++ b/page/game.css
@@ -12,3 +12,18 @@
   height: 80vh;
   background: red;
 }
+
+#projectile {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.projectile {
+  position: absolute;
+  width: 6px;
+  height: 12px;
+  background-color: yellow;
+  border-radius: 2px;
+}
