--- a/page/game.css
+++ b/page/game.css
@@ -27,3 +27,42 @@
   background-color: yellow;
   border-radius: 2px;
 }
+
+#cutscene {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: 6;
+}
+
+#cutscene-text {
+  color: white;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  min-width: 500px;
+  font-family: "Orbitron";
+  text-align: justify;
+}
+
+@keyframes arrow-blink {
+  0%,
+  100% {
+    color: white;
+  }
+  50% {
+    color: black;
+  }
+}
+
+.blink {
+  animation-name: arrow-blink;
+  animation-duration: 0.6s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
