--- a/page/game.css
+++ b/page/game.css
@@ -10,6 +10,7 @@
   --shadow: rgba(72, 199, 255, 0.3);
 }
 
+
 /* #region **** Écran de jeu  */
 #player-icon {
   width: 50px;
@@ -65,15 +66,17 @@
   background-color: var(--bg);
   border: 3px solid var(--neon);
   padding : 50px;
+  top: 30px;
 }
 
 #cutscene {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-  margin-bottom: 20px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: 6;
 }
 
 /*#player-icon {
@@ -113,6 +116,7 @@
   left: 0;
   z-index: 6;
 }*/
+
 @keyframes arrow-blink {
   0%,
   100% {
