--- a/page/main.css
+++ b/page/main.css
@@ -3,10 +3,10 @@
   --bg: #0a0f1f;
   --bg-dim: #050914;
   --panel: rgba(10, 20, 40, 0.85);
-  --neon: #48c7ff;          /* bleu néon principal */
-  --neon-soft: #8ee7ff;     /* bleu néon plus doux */
-  --accent: #9d7cff;        /* violet accent */
-  --danger: #ff5e7a;        /* rouge/rose accent */
+  --neon: #48c7ff; /* bleu néon principal */
+  --neon-soft: #8ee7ff; /* bleu néon plus doux */
+  --accent: #9d7cff; /* violet accent */
+  --danger: #ff5e7a; /* rouge/rose accent */
   --text: #cfe8ff;
   --shadow: rgba(72, 199, 255, 0.3);
 }
@@ -29,9 +29,15 @@ body::after {
   pointer-events: none;
 }
 
-html, body {
+html,
+body {
   height: 100%;
-  background: radial-gradient(1200px 600px at 50% 20%, var(--bg) 0%, var(--bg-dim) 60%, #000 100%);
+  background: radial-gradient(
+    1200px 600px at 50% 20%,
+    var(--bg) 0%,
+    var(--bg-dim) 60%,
+    #000 100%
+  );
   color: var(--text);
   font-family: "Press Start 2P", monospace;
   overflow: hidden;
@@ -42,9 +48,15 @@ body::before {
   content: "";
   position: fixed;
   inset: 0;
-  background-image:
-    linear-gradient(rgba(255,255,255,0.03) 1px, transparent 1px),
-    radial-gradient(circle at 50% 50%, rgba(72,199,255,0.06), transparent 50%);
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.03) 1px,
+      transparent 1px
+    ),
+    radial-gradient(
+      circle at 50% 50%,
+      rgba(72, 199, 255, 0.06),
+      transparent 50%
+    );
   background-size: 100% 2px, 600px 600px;
   mix-blend-mode: overlay;
   pointer-events: none;
@@ -108,8 +120,8 @@ body::before {
 /* #region **** bouton parametre  */
 #pause-btn {
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: 30px;
+  right: 30px;
   padding: 10px 14px;
   font-size: 12px;
   color: var(--text);
@@ -130,14 +142,17 @@ body::before {
   position: absolute;
   bottom: 20px;
   left: 50%;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
   width: min(540px, 92vw);
+  height: fit-content;
   padding: 18px;
   background: var(--panel);
   border: 2px solid var(--neon);
   border-radius: 10px;
   box-shadow: 0 0 12px var(--shadow);
   text-align: center;
+  z-index: 8;
 }
 
 #pause-menu h2 {
@@ -166,7 +181,6 @@ body::before {
 /* #endregion **** bouton parametre  */
 
 /* #region **** Écran de jeu  */
-
 
 #cutscene-text {
   width: min(900px, 92vw);
