Ajout des lignes d'ennemis
- Ajout des lignes d'ennemis avec mouvements
- Adaptation de l'animation des ennemis à la taille de l'écran
- Ajout de la possibilité de passer la cinématique en appuyant sur Shift (avec confirmation)
- Gestion d'un bug qui multipliait les balises audio pendant les cinématiques sans jamais les supprimer
- Ajout d'un bouton 'fermer le menu' dans le menu pause/ paramètres

Co-authored-by: npaccoud <nathpacc@gmail.com>
Co-authored-by: jcolange <jade.colanges@live.fr>
Co-committed-by: jcolange <jade.colanges@live.fr>

--- a/page/game.css
+++ b/page/game.css
@@ -145,3 +145,27 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
+
+#enemy-carousel {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.enemy {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+}
+
+@media (orientation: portrait) {
+  .enemy {
+    width: 24px;
+    height: 24px;
+  }
+
+  #player-icon {
+    width: 42px;
+  }
+}
