--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -145,7 +145,37 @@
   }
 }
 
-/* Zone des vies */
+/* Interface autour du jeu */
+
+#HUD {
+  width: 95%;
+  height: 95%;
+  position: fixed;
+  top: 2.5%;
+  left: 2.5%;
+}
+
+.topHUD {
+  position: absolute;
+  left: 5%;
+  width: 95%;
+}
+
+.level-score {
+  position: absolute;
+  left: 45%;
+  top: 20px;
+  transform: translateX(-55%);
+}
+
+#good-score {
+  color: var(--neon);
+}
+
+#bad-score {
+  color: var(--attack);
+}
+
 #lives {
   position: absolute;
   top: 20px;
@@ -172,9 +202,20 @@
   border: 1px solid var(--neon);
 }
 
-#progress-bar {
+#good-progress,
+#bad-progress {
   width: 100%;
-  height: 40%;
-  background: var(--neon);
+  height: 0%;
   transition: height 0.2s ease;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+#bad-progress {
+  background: var(--attack);
+}
+
+#good-progress {
+  background: var(--text);
 }
