--- a/page/stylesheets/main-style.css
+++ b/page/stylesheets/main-style.css
@@ -138,7 +138,8 @@ body::before {
 }
 
 /* ===== Menu pause ===== */
-#pause-menu {
+#pause-menu,
+#end-level {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -161,7 +162,8 @@ body::before {
   color: var(--accent);
 }
 
-#pause-menu button {
+#pause-menu button,
+#end-level button {
   display: block;
   width: 100%;
   padding: 12px;
