--- a/page/stylesheets/main-style.css
+++ b/page/stylesheets/main-style.css
@@ -156,7 +156,9 @@ body::before {
   z-index: 8;
 }
 
-.scoreboard {
+#score-board {
+  height: 70vh;
+  overflow: auto;
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -164,11 +166,13 @@ body::before {
   transform: translateX(-50%) translateY(-50%);
   width: 80vw;
   max-width: 850px;
-  height: fit-content;
-  padding: 15px;
-  padding-bottom: 10px;
   background: var(--panel);
   border: 2px solid var(--neon);
+}
+
+.scoreboard {
+  width: 100%;
+  padding: 0px 15px 10px 15px;
   border-radius: 10px;
   box-shadow: 0 0 12px var(--shadow);
 }
@@ -181,12 +185,16 @@ body::before {
 }
 
 .scoreboard th {
+  padding-top: 15px;
   padding-bottom: 5px;
   border-bottom: 2px solid var(--neon);
 }
 
 .scoreboard thead {
   margin-bottom: 10px;
+  position: sticky;
+  top: 0px;
+  background: var(--panel);
 }
 
 #pause-menu h2 {
