Cinématique de fin
- Ajout des danses des personnages dans la cinématique de fin
- Ajout des musiques
- Ajout des images des managers dans la cinématique de fin de niveau 2
- Correctif des déplacements du relou dans la cinématique de fin du jeu

--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -150,6 +150,12 @@
   bottom: -5px;
 }
 
+#managers {
+  position: absolute;
+  bottom: -60px;
+  z-index: 3;
+}
+
 @keyframes arrow-blink {
   0%,
   100% {
