--- a/page/stylesheets/main-style.css
+++ b/page/stylesheets/main-style.css
@@ -132,6 +132,7 @@ body::before {
   position: absolute;
   top: 30px;
   right: 30px;
+  z-index: 15;
   padding: 10px 14px;
   font-size: 12px;
   color: var(--text);
