Ajout de powerups
- Création de l'affichage des powerups à droite
- Ajout des effets des powerups
- Ajout d'images pour le stock de powerups
- Tri du dossier image

--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -281,3 +281,25 @@
 #good-progress {
   background: var(--good);
 }
+
+/* Powerups */
+#power-ups {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 10px;
+  top: 10%;
+}
+
+#power-ups img {
+  width: 25px;
+}
+
+.botHUD {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  width: fit-content;
+}
