--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -287,12 +287,27 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  right: 10px;
+  right: -5px;
   top: 10%;
+  width: 8%;
+}
+
+#power-ups div {
+  margin-left: 5px;
+  margin-top: 5px;
 }
 
 #power-ups img {
   width: 25px;
+  float: left;
+  margin-right: 5px;
+}
+
+.pup-detail {
+  display: block;
+  width: 100%;
+  font-size: 10px;
+  text-align: right;
 }
 
 .botHUD {
