--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -296,22 +296,29 @@
   width: 8%;
 }
 
-#power-ups div {
+/* #power-ups div {
   margin-left: 5px;
   margin-top: 5px;
-}
+} */
 
-#power-ups img {
-  width: 25px;
+#power-ups .mini-tile {
   float: left;
   margin-right: 5px;
 }
 
-.pup-detail {
+#power-ups span {
+  height: 27px;
   display: block;
+  white-space: nowrap;
+}
+
+.pup-detail {
   width: 100%;
+  height: fit-content !important;
+  margin-bottom: 10px;
   font-size: 10px;
   text-align: right;
+  white-space: initial !important;
 }
 
 .botHUD {
@@ -325,4 +332,29 @@
 
 .player--hit {
   opacity: 0.7;
+}
+
+/* Images de power-ups */
+.diplomat {
+  background-position: -96px -240px;
+}
+
+.boss {
+  background-position: -144px -240px;
+}
+
+.team {
+  background-position: -192px -240px;
+}
+
+.boost {
+  background-position: -240px -240px;
+}
+
+.coffee {
+  background-position: -192px -288px;
+}
+
+.perfect {
+  background-position: -240px -288px;
 }
