Correctif des maps
- Modification de l'icône de joueur selon la map choisie
- Correction des cinématiques pour s'accorder au genre du patron
- Ajout du menu de choix d'équipe après le lancement d'une partie
- Enregistrement de la map choisie dans gameOptions

--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -20,7 +20,12 @@
 #player-icon {
   position: absolute;
   bottom: 20px;
-  left: 50%;
+  background-repeat: no-repeat;
+  image-rendering: pixelated;
+  background-image: var(--map);
+  background-size: 576px 1632px !important;
+  width: 96px;
+  height: 96px;
 }
 
 /* Conteneur des projectiles */
@@ -208,6 +213,9 @@
 
   #player-icon {
     width: 42px;
+    background-repeat: no-repeat;
+    image-rendering: pixelated;
+    background-image: var(--map);
   }
 }
 
