--- a/page/stylesheets/main-style.css
+++ b/page/stylesheets/main-style.css
@@ -185,6 +185,7 @@ body::before {
   border: 2px solid var(--neon);
   box-shadow: 0 0 12px var(--shadow);
   border-radius: 10px;
+  z-index: 10;
 }
 
 #party-lights {
