Tableau des scores - API Go
- API Go fonctionnelle
- Fonctions affichage des scores, requête à l'API, pagination
- Affichage du tableau des scores en fin de partie
- Suppression de log.print de debug
- Style sur la pagination du scoreboard
- Resolution d'un bug dans la fonction init() qui se déclenche aléatoirement, finalisation du score screen et de la transition entre les screen de fin fu jeu
- Appel de scoreScreen() en fin de partie case game over
- Debug pour éviter que les fonctions synchrones et asynchrones s'exécute en parallèle, résolu
- Finalisation de l'affichage du scoreboard en fin de partie
- Modification de la variable gameState

Co-authored-by: Valentine <valentineladjyn@hotmail.fr>
Reviewed-on: http://zone01normandie.org/git/jcolange/make-your-game/pulls/59

--- a/page/stylesheets/main-style.css
+++ b/page/stylesheets/main-style.css
@@ -242,11 +242,29 @@ body::before {
 .back-to-main {
   max-width: 400px;
   margin: auto;
+  margin-bottom: 12px;
+}
+
+.pagination-container {
+    margin-left: 36%;
+    margin-bottom: 9px;
+
+}
+.pagination-button {
+  color: var(--text);
+    background: rgba(10, 20, 40, 0.85);
+    border: 2px solid var(--neon);
+    border-radius: 8px;
+    cursor: pointer;
+    margin: 2px;
+    padding: 2px;
+    width: 25px;
 }
 
 #pause-menu button:hover,
 .confirm-pannel button:hover,
-.back-to-main:hover {
+.back-to-main:hover,
+.pagination-button:hover {
   border-color: var(--neon-soft);
   box-shadow: 0 0 12px var(--neon-soft);
 }
