--- a/page/stylesheets/game.css
+++ b/page/stylesheets/game.css
@@ -199,9 +199,10 @@
 }
 
 #enemy-carousel {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 10px;
+  width: 95%;
+  height: 430px;
   overflow: hidden;
 }
 
@@ -211,6 +212,11 @@
   height: 48px;
   background-image: var(--map);
   background-repeat: no-repeat;
+}
+
+#powerup-float {
+  position: absolute;
+  margin-top: 10px;
 }
 
 @media (orientation: portrait) {
